--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -3,26 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <main class="app-main">
+      <div class="qr-code-component">
+        <header>
+        <picture class="qr-code-image">
+          <img src="images/image-qr-code.png" alt="" srcset="">
+        </picture>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+          <h2 class="title">
+            Improve your front-end skills by building projects
+          </h2>
+        </title>
+        </header>
+        <p class="content">
+          Scan the QR code to visit Frontend Mentor and take yuor coding skills to the next level.
+        </p>
+      </div>
+  </main>
 </body>
 </html>
